--- a/app/client/src/components/Image.css
+++ b/app/client/src/components/Image.css
@@ -1,10 +1,9 @@
 .Image {
     border-radius: 5px;
-    filter: drop-shadow(0px 0px 5px #aaa);
+    filter: drop-shadow(0px 0px 10px #555);
 }
 
 .Image-selected {
     border-radius: 5px;
-    filter: drop-shadow(0px 0px 5px #aaa);
-    border: 5px solid rgba(138, 212, 238);
+    box-shadow: 0px 0px 14px 7px rgba(31,177,255,1);
 }
